IF(UNIX)
DFHACK_PLUGIN(vectors vectors.cpp)
endif()

DFHACK_PLUGIN(kittens kittens.cpp)
DFHACK_PLUGIN(rawdump rawdump.cpp)
DFHACK_PLUGIN(itemhacks itemhacks.cpp)
DFHACK_PLUGIN(notes notes.cpp)
DFHACK_PLUGIN(memview memview.cpp)
DFHACK_PLUGIN(buildprobe buildprobe.cpp)
#DFHACK_PLUGIN(tiles tiles.cpp)

OPTION(BUILD_DF2MC "Build DF2MC (needs a checkout first)." ON)
if(BUILD_DF2MC)
    add_subdirectory (df2mc)
endif()
