if(UNIX)
    dfhack_plugin(vectors vectors.cpp)
endif()

include(FindThreads)

add_definitions(-DDEV_PLUGIN)
dfhack_plugin(buildprobe buildprobe.cpp)
dfhack_plugin(color-dfhack-text color-dfhack-text.cpp)
dfhack_plugin(counters counters.cpp)
dfhack_plugin(dumpmats dumpmats.cpp)
dfhack_plugin(eventExample eventExample.cpp)
dfhack_plugin(frozen frozen.cpp)
dfhack_plugin(kittens kittens.cpp LINK_LIBRARIES ${CMAKE_THREAD_LIBS_INIT} COMPILE_FLAGS_MSVC "/wd4316")
dfhack_plugin(memview memview.cpp memutils.cpp LINK_LIBRARIES lua)
dfhack_plugin(onceExample onceExample.cpp)
# dfhack_plugin(renderer-msg renderer-msg.cpp)
# dfhack_plugin(rprobe rprobe.cpp)
# dfhack_plugin(stepBetween stepBetween.cpp)
dfhack_plugin(stockcheck stockcheck.cpp)
dfhack_plugin(stripcaged stripcaged.cpp)
dfhack_plugin(tilesieve tilesieve.cpp)
# dfhack_plugin(zoom zoom.cpp)

if(UNIX)
    dfhack_plugin(ref-index ref-index.cpp)
endif()

add_subdirectory(check-structures-sanity)
